--- a/app/src/main/res/layout/activity_shopping_mall.xml
+++ b/app/src/main/res/layout/activity_shopping_mall.xml
@@ -3,22 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".homeViewpagerComponent.ShoppingMallActivity">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/slidingViewPager"
+    <WebView
+        android:id="@+id/shoppingmall_webview"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
-        android:text="hello..?"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slidingViewPager" />
 </androidx.constraintlayout.widget.ConstraintLayout>
