--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#fff</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#000</color>
+    <color name="colorActive">#FF2C2C</color>
 </resources>
